[gd_scene format=3 uid="uid://82tk0h3p2f6q"]

[ext_resource type="Script" uid="uid://cauloromvxmpy" path="res://Scripts/RoomScripts/room_lounge.gd" id="1_bmw2n"]
[ext_resource type="Texture2D" uid="uid://effp1yy4fuga" path="res://Assets/Backgrounds/LoungeFinal.png" id="2_14xkm"]
[ext_resource type="Texture2D" uid="uid://b2nismuyicpjk" path="res://Assets/InScene Items/Living - Dining Chair.png" id="3_4i1u2"]
[ext_resource type="Texture2D" uid="uid://bh37afxrnoa2t" path="res://Assets/InScene Items/Living - Dining Table.png" id="4_8fksp"]
[ext_resource type="PackedScene" uid="uid://dmkvvkru1sug5" path="res://Scenes/AssetScenes/Door_Default.tscn" id="4_u2gad"]
[ext_resource type="Texture2D" uid="uid://dk5jwgbckp32k" path="res://Assets/InScene Items/Living - Coffee Table.png" id="5_1v1ye"]
[ext_resource type="Texture2D" uid="uid://dmuo7ft866ti0" path="res://Assets/InScene Items/Living - Front Plant.png" id="6_p7tcv"]
[ext_resource type="Texture2D" uid="uid://bvw4t3sefkbyr" path="res://Assets/InScene Items/Living - Left Armchair.png" id="7_g55x0"]
[ext_resource type="Texture2D" uid="uid://cf5h650xbkkel" path="res://Assets/InScene Items/Living - Right Armchair.png" id="8_83a4s"]
[ext_resource type="Texture2D" uid="uid://btssjfc67ug3i" path="res://Assets/Ignus/I1.png" id="8_g55x0"]
[ext_resource type="Texture2D" uid="uid://byh7458cwqp5j" path="res://Assets/Ignus/I2.png" id="9_83a4s"]
[ext_resource type="Texture2D" uid="uid://btr1tye1fyfx0" path="res://Assets/InScene Items/Living - Small Table.png" id="9_iab8o"]
[ext_resource type="PackedScene" uid="uid://cbuw6o5y7vsaw" path="res://Scenes/AssetScenes/dynamicInteractableObject.tscn" id="10_8fksp"]
[ext_resource type="Texture2D" uid="uid://cnnbf2gdu2wel" path="res://Assets/InScene Items/Living - WateringCan.png" id="10_gimoh"]
[ext_resource type="Texture2D" uid="uid://dw0xn8yvcj1lx" path="res://Assets/Ignus/I3.png" id="10_iab8o"]
[ext_resource type="Script" uid="uid://kmlimlxdg6xn" path="res://Scripts/ignus_script.gd" id="11_83a4s"]

[sub_resource type="SpriteFrames" id="SpriteFrames_p7tcv"]
animations = [{
"frames": [{
"duration": 10.0,
"texture": ExtResource("8_g55x0")
}, {
"duration": 2.0,
"texture": ExtResource("9_83a4s")
}, {
"duration": 1.0,
"texture": ExtResource("10_iab8o")
}, {
"duration": 2.0,
"texture": ExtResource("9_83a4s")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_14xkm"]
size = Vector2(319.25, 253)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gimoh"]
size = Vector2(232, 139)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8fksp"]
size = Vector2(321.7605, 294)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iab8o"]
size = Vector2(173, 71)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p7tcv"]
size = Vector2(335, 276)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_83a4s"]
size = Vector2(196, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1v1ye"]
size = Vector2(294.6724, 244)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g55x0"]
size = Vector2(220, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w5ms4"]
size = Vector2(101, 89)

[node name="RoomLounge" type="Node2D" unique_id=1548855678]
script = ExtResource("1_bmw2n")

[node name="Background" type="TextureRect" parent="." unique_id=1710820961]
z_index = -1
offset_left = 4.0
offset_top = -691.0
offset_right = 1924.0
offset_bottom = 1189.0
size_flags_horizontal = 3
texture = ExtResource("2_14xkm")

[node name="BasicRoomItems" type="Node2D" parent="." unique_id=1711800554]

[node name="DiningChair" type="Sprite2D" parent="BasicRoomItems" unique_id=664680797]
visibility_layer = 16
z_index = 1
position = Vector2(240, 85)
texture = ExtResource("3_4i1u2")
flip_h = true

[node name="DiningTable" type="Sprite2D" parent="BasicRoomItems" unique_id=2025055171]
visibility_layer = 16
z_index = 1
position = Vector2(251, 371)
texture = ExtResource("4_8fksp")

[node name="FrontPlantRight" type="Sprite2D" parent="BasicRoomItems" unique_id=930509795]
visibility_layer = 16
z_index = 1
position = Vector2(1322, 800)
texture = ExtResource("6_p7tcv")

[node name="FrontPlantLeft" type="Sprite2D" parent="BasicRoomItems" unique_id=1078475786]
visibility_layer = 16
z_index = 1
position = Vector2(601, 800)
texture = ExtResource("6_p7tcv")
flip_h = true

[node name="SmallTable" type="Sprite2D" parent="BasicRoomItems" unique_id=1129105447]
position = Vector2(1704, 622)
texture = ExtResource("9_iab8o")

[node name="WateringCan" type="Sprite2D" parent="BasicRoomItems" unique_id=1760417068]
position = Vector2(1700, 597)
texture = ExtResource("10_gimoh")

[node name="LivingIgnus" type="AnimatedSprite2D" parent="BasicRoomItems" unique_id=1986796279]
position = Vector2(1502, -225.00002)
scale = Vector2(1.08, 1.08)
sprite_frames = SubResource("SpriteFrames_p7tcv")
frame_progress = 0.8909457
script = ExtResource("11_83a4s")

[node name="Doors" type="Node2D" parent="." unique_id=122717315]

[node name="StudyDoor_Area" parent="Doors" unique_id=974499172 instance=ExtResource("4_u2gad")]
position = Vector2(1939, 819)
currentRoom = 3
roomDestination = 8

[node name="Door_Marker" parent="Doors/StudyDoor_Area" index="1" unique_id=126591328]
position = Vector2(-265, -91)

[node name="Bedroom_DoorArea" parent="Doors" unique_id=68653238 instance=ExtResource("4_u2gad")]
position = Vector2(261, 637)
currentRoom = 3
roomDestination = 2

[node name="Door_Collision" parent="Doors/Bedroom_DoorArea" index="0" unique_id=2029805447]
position = Vector2(-262.375, 174)
shape = SubResource("RectangleShape2D_14xkm")

[node name="Door_Marker" parent="Doors/Bedroom_DoorArea" index="1" unique_id=126591328]
position = Vector2(-208, 82)

[node name="Kitchen_Door_Area" parent="Doors" unique_id=313317068 instance=ExtResource("4_u2gad")]
position = Vector2(35, -47)
currentRoom = 3
roomDestination = 5

[node name="Door_Marker" parent="Doors/Kitchen_Door_Area" index="1" unique_id=126591328]
position = Vector2(9, -98)

[node name="FrontDoor_Area" parent="Doors" unique_id=1547647925 instance=ExtResource("4_u2gad")]
position = Vector2(991, 957)
currentRoom = 3
roomDestination = 4

[node name="Door_Collision" parent="Doors/FrontDoor_Area" index="0" unique_id=2029805447]
position = Vector2(-51, 31.5)
shape = SubResource("RectangleShape2D_gimoh")

[node name="Door_Marker" parent="Doors/FrontDoor_Area" index="1" unique_id=126591328]
position = Vector2(-153, -86)

[node name="DynamicRoomItems" type="Node2D" parent="." unique_id=1329898779]

[node name="ArmchairRightArea" parent="DynamicRoomItems" unique_id=346532964 instance=ExtResource("10_8fksp")]
position = Vector2(1040, 93)
objectName = "rightArmchair"

[node name="ObjectInteract" parent="DynamicRoomItems/ArmchairRightArea" index="0" unique_id=1854910098]
position = Vector2(245.64075, 178.25262)
shape = SubResource("RectangleShape2D_8fksp")

[node name="Sprite2D" parent="DynamicRoomItems/ArmchairRightArea" index="1" unique_id=1783952993]
position = Vector2(258.521, 170.25262)
texture = ExtResource("8_83a4s")

[node name="StaticBody2D" parent="DynamicRoomItems/ArmchairRightArea" index="2" unique_id=1731382922]
visible = true

[node name="Collision" parent="DynamicRoomItems/ArmchairRightArea/StaticBody2D" index="0" unique_id=2126398544]
visible = true
position = Vector2(234.5, 192.5)
shape = SubResource("RectangleShape2D_iab8o")

[node name="ArmchairLeftArea" parent="DynamicRoomItems" unique_id=1173804854 instance=ExtResource("10_8fksp")]
position = Vector2(672, 346)
objectName = "leftArmchair"

[node name="ObjectInteract" parent="DynamicRoomItems/ArmchairLeftArea" index="0" unique_id=1854910098]
position = Vector2(10.5, -1)
shape = SubResource("RectangleShape2D_p7tcv")

[node name="Sprite2D" parent="DynamicRoomItems/ArmchairLeftArea" index="1" unique_id=1783952993]
texture = ExtResource("7_g55x0")

[node name="StaticBody2D" parent="DynamicRoomItems/ArmchairLeftArea" index="2" unique_id=1731382922]
visible = true

[node name="Collision" parent="DynamicRoomItems/ArmchairLeftArea/StaticBody2D" index="0" unique_id=2126398544]
visible = true
position = Vector2(-2, 4)
shape = SubResource("RectangleShape2D_83a4s")

[node name="CoffeeTableArea" parent="DynamicRoomItems" unique_id=1596629692 instance=ExtResource("10_8fksp")]
position = Vector2(647.6552, 81.99347)

[node name="ObjectInteract" parent="DynamicRoomItems/CoffeeTableArea" index="0" unique_id=1854910098]
position = Vector2(348.0086, 126.00653)
shape = SubResource("RectangleShape2D_1v1ye")

[node name="Sprite2D" parent="DynamicRoomItems/CoffeeTableArea" index="1" unique_id=1783952993]
position = Vector2(344.3448, 128.00653)
texture = ExtResource("5_1v1ye")

[node name="StaticBody2D" parent="DynamicRoomItems/CoffeeTableArea" index="2" unique_id=1731382922]
visible = true

[node name="Collision" parent="DynamicRoomItems/CoffeeTableArea/StaticBody2D" index="0" unique_id=2126398544]
visible = true
position = Vector2(346.3448, 118.00653)
shape = SubResource("RectangleShape2D_g55x0")

[node name="DiningTableArea" parent="DynamicRoomItems" unique_id=1298040729 instance=ExtResource("10_8fksp")]

[node name="Collisions" type="Node2D" parent="." unique_id=547089238]

[node name="Table" type="StaticBody2D" parent="Collisions" unique_id=1562978724]
position = Vector2(-1542, -804)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collisions/Table" unique_id=1300681949]
position = Vector2(3245.5, 1405.5)
shape = SubResource("RectangleShape2D_w5ms4")
debug_color = Color(0.98255795, 0, 0.3653197, 0.41960785)

[node name="fallbackMarker" type="Marker2D" parent="." unique_id=1393730870 groups=["fallback"]]
position = Vector2(911, 258)

[node name="CameraThings" type="Node2D" parent="." unique_id=830525890]

[node name="Camera2D" type="Camera2D" parent="CameraThings" unique_id=300892772]
position = Vector2(963, -151)

[node name="CameraMarkerUpper" type="Marker2D" parent="CameraThings" unique_id=2062819970]
position = Vector2(961, -142)

[node name="CameraMarkerLower" type="Marker2D" parent="CameraThings" unique_id=373177944]
position = Vector2(957, 543)

[node name="RoomBoundary" type="StaticBody2D" parent="." unique_id=1165903164]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RoomBoundary" unique_id=1499209645]
position = Vector2(32.453953, -711.8154)
scale = Vector2(0.98249316, 1.5342343)
build_mode = 1
polygon = PackedVector2Array(122.69403, 175.86325, 124.729675, 315.3465, 1.573597, 317.30188, -2.4976768, 499.15155, 114.55148, 503.0623, 115.569305, 883.7082, 15.823059, 883.7082, 10.733967, 1066.8615, 814.81085, 1064.2543, 804.6326, 1153.5496, 1038.731, 1156.1567, 1043.8201, 1070.7722, 1896.7522, 1066.8615, 1900.8235, 930.6371, 1773.5962, 923.4674, 1768.5071, 179.1222)

[editable path="Doors/StudyDoor_Area"]
[editable path="Doors/Bedroom_DoorArea"]
[editable path="Doors/Kitchen_Door_Area"]
[editable path="Doors/FrontDoor_Area"]
[editable path="DynamicRoomItems/ArmchairRightArea"]
[editable path="DynamicRoomItems/ArmchairLeftArea"]
[editable path="DynamicRoomItems/CoffeeTableArea"]
[editable path="DynamicRoomItems/DiningTableArea"]
